plugins {
	id 'java'
	id 'application'
	id 'jvm-test-suite'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'maven-publish'
}

group = 'com.fujitsu.edgewareroad'

def appProps = new Properties()
file("src/main/resources/application.properties").withInputStream { appProps.load(it) }

version = appProps.getProperty("trivysummary.version")

def javaHome = System.properties['java.home']

repositories {
	mavenCentral()
}

sourceSets {
        main {
                java {
                        srcDirs= ["src/main/java"]
                }
                resources {
                        srcDirs= ["src/main/resources"]
                }
        }
        test {
                java {
                        srcDirs= ["src/test/java"]
                }
                resources {
                        srcDirs= ["src/test/resources"]
                }
        }
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	// Note, building on Java 21 but Spring Boot 6 still allows JDK 17 compatibility, so allow for this.
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

compileJava {
	options.compilerArgs << '--add-exports=java.desktop/sun.awt=ALL-UNNAMED'
}

application {
	mainClass = 'com.fujitsu.edgewareroad.trivysummary.TrivySummaryApp'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
	implementation 'org.thymeleaf:thymeleaf:3.1.3.RELEASE'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.31'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-slf4j:1.1.31'
	implementation ('io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.31') {
		exclude group: 'commons-io', module: 'commons-io'
	}
	implementation 'commons-io:commons-io:2.20.0'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-core:1.1.31'
	// https://mvnrepository.com/artifact/org.jsoup/jsoup
	implementation 'org.jsoup:jsoup:1.21.2'
	implementation 'org.apache.xmlgraphics:batik-svggen:1.19'
	implementation 'org.apache.xmlgraphics:batik-dom:1.19'
	implementation 'org.apache.commons:commons-lang3:3.18.0'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	manifest {
		attributes(
			'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
			'Main-Class': application.mainClass,
			'Implementation-Version': version
		)
	}

	from(configurations.runtimeClasspath.files.collect { it.isDirectory() ? it : zipTree(it) }) {}
}

//create a Jar of the sources
task sourcesJar(type: Jar) {
	from sourceSets.main.allSource
    archiveClassifier = "sources"
}

testing {
	suites {
		test {
			useJUnitJupiter()
		}
	}
}

// Publishing the output to GitHub (standard JAR, sources plus POM file, distribution ZIP)
publishing {
	publications {
		maven(MavenPublication) {
			groupId = 'com.fujitsu.edgewareroad'
			artifacts = [ jar, sourcesJar, distZip ]
			pom {
				name = 'trivysummary'
				description = 'Reporting app to summarise Trivy JSON output, either for single scans or to compare two scans. Also useful in CI/CD pipelines to auto-fail if vulnerabilities above a stated severity are in a component'
			}
			pom.withXml {
			    def dependenciesNode = asNode().appendNode('dependencies')
			    configurations.implementation.allDependencies.each {
			        def dependencyNode = dependenciesNode.appendNode('dependency')
			        dependencyNode.appendNode('groupId', it.group)
			        dependencyNode.appendNode('artifactId', it.name)
			        dependencyNode.appendNode('version', it.version)
			    }
			}
		}
	}
	repositories {
		maven {
			name = 'GitHubPackages'
			credentials {
				username = project.findProperty("mvnpub.user") ?: System.getenv("USERNAME")
				password = project.findProperty("mvnpub.key") ?: System.getenv("PASSWORD")
			}
			url = uri('https://maven.pkg.github.com/EdgewareRoad/TrivySummary')
		}
	}
}
